# O2NL-Technical-Reports

./: .env  .env.development  .env.example  .env.local.example  .env.production  .env.test  .gitignore  .pre-commit-config.yaml  README.md  amplify.yml  index.html  package-lock.json  package.json  postcss.config.js  pyproject.toml  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts  vitest.config.ts
.github/: copilot-instructions.md
.storybook/: main.js  main.ts  preview.ts
.storybook/__mocks__/: clerk-mock.js
api/spt/: data.ts
api/staff/: data.ts
docs/: DATABASE.md  DustMonitoring.tsx  improvements.md
prisma/: header.prisma  mergePrismaSchema.cjs  mergePrismaSchema.js  schema.prisma  seed.js  seed.ts
prisma/models/: AMT.prisma  AmtBudget.prisma  Consenting.prisma  Dust.prisma  EarnedValue.prisma  Emissions.prisma  Equipment.prisma  PAB.prisma  StaffFTE.prisma  Sustainability.prisma  SustainabilityInitiatives.prisma  Systems.prisma  TimeLogs.prisma  geotechnical_atterbergs.prisma  geotechnical_cbr.prisma  geotechnical_labgrading.prisma  geotechnical_mdd.prisma  geotechnical_psd.prisma
prisma/seed-data/: geotechnical_atterbergs.js  geotechnical_atterbergs.ts  geotechnical_psd.js  geotechnical_psd.ts
scripts/: __setup-test-env.js  connect-to-supabase.js  deploy-prisma.js  install-deps.js  prisma-db-push.js  prisma-generate.js  prisma-migrate.js  prisma-reset.js  prisma-studio.js  setup-database-env.js  test-db-connection.js
server/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
server/scripts/: deploy-prisma.cjs
server/src/: app.ts  index.ts
src/: App.tsx  App2.tsx  index.css  main.tsx
src/auth/: AuthComponents.tsx  ClerkAuthAdapter.tsx  ClerkProvider.tsx
src/components/: HomeTest.tsx
src/config/: tailwind.config.js  tailwind.config.ts  vercel.config.ts  vitest.config.ts
src/constants/: chartConfig.ts  default.ts  displayNames.ts  materials.ts  tableData.ts  theme.ts  zones.ts
src/consumption_layer/: __init__.py
src/home/: HomeTest.tsx
src/hooks/: index.ts  useAccessControl.ts  useTableFilters.ts
src/lib/: logger.ts  roles.ts
src/routes/: GeotechnicalRoutes.tsx  ProtectedRoute.tsx  accessControl.ts  index.tsx
src/tests/: README.md  setup.ts
src/types/: default.ts  dtoTypes.ts  env.d.ts  index.ts  prismaTypes.ts  report.ts  roadmap.ts
supabase/migrations/: 20250212200426_quick_wind.sql  20250213065956_maroon_disk.sql  (+1 more)
(+704 files in other folders)
