[project]
name = "consumption-layer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Allan Ou", email = "AOu@tonkintaylor.co.nz" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
