[project]
name = "consumption-layer"
version = "0.1.0"
description = "Consumption layer for O2NL"
readme = "README.md"
authors = [
    { name = "Allan Ou", email = "allan.ou@o2nl.nz" },
    { name = "Daniel Le Roux", email = "daniel.leroux@o2nl.nz" },
    { name = "Dave Braendler", email = "dave.braendler@o2nl.nz" },
    { name = "Jonty Parkin", email = "jonty.parkin@o2nl.nz" },
]
requires-python = ">=3.12"
dependencies = ["ipykernel>=6.29.5", "ipython>=8.31.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
default-groups = ["dev", "test"]

[dependency-groups]
dev = ["deptry>=0.23.0", "ruff>=0.9.4", "usethis>=0.5.1"]
test = ["pytest>=8.3.4", "pytest-cov>=6.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]
filterwarnings = ["error"]

[tool.ruff]
src = ["src"]
line-length = 88

[tool.ruff.lint]
select = [
    "A",
    "C4",
    "E4",
    "E7",
    "E9",
    "EM",
    "F",
    "FURB",
    "I",
    "PLE",
    "PLR",
    "PT",
    "RUF",
    "SIM",
    "UP",
]
ignore = ["PLR2004", "SIM108"]
